# amazon-sagemaker-generativeai

3_distributed_training/models/openai--gpt-oss/: accelerate_config.yaml  args.yaml  finetune_gpt_oss_deepspeed_zero3.ipynb  main.py  pyproject.toml
3_distributed_training/models/openai--gpt-oss/code/: requirements.txt
3_distributed_training/models/openai--gpt-oss/local-dataset/train/: dataset.json
3_distributed_training/models/openai--gpt-oss/local-dataset/val/: dataset.json
